--- a/otp.html
+++ b/otp.html
@@ -1,112 +1,110 @@
-class OTP_email():
-    def OTP(num, otp):
-
-        html = """\
-            <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style type="text/css">
-        @media screen {{
-            @font-face {{
+        @media screen {
+            @font-face {
                 font-family: 'Lato';
                 font-style: normal;
                 font-weight: 400;
                 src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v11/qIIYRU-oROkIk8vfvxw6QvesZW2xOQ-xsNqO47m55DA.woff) format('woff');
-            }}
+            }
 
-            @font-face {{
+            @font-face {
                 font-family: 'Lato';
                 font-style: normal;
                 font-weight: 700;
                 src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v11/qdgUG4U09HnJwhYI-uK18wLUuEpTyoUstqEm5AMlJo4.woff) format('woff');
-            }}
+            }
 
-            @font-face {{
+            @font-face {
                 font-family: 'Lato';
                 font-style: italic;
                 font-weight: 400;
                 src: local('Lato Italic'), local('Lato-Italic'), url(https://fonts.gstatic.com/s/lato/v11/RYyZNoeFgb0l7W3Vu1aSWOvvDin1pK8aKteLpeZ5c0A.woff) format('woff');
-            }}
+            }
 
-            @font-face {{
+            @font-face {
                 font-family: 'Lato';
                 font-style: italic;
                 font-weight: 700;
                 src: local('Lato Bold Italic'), local('Lato-BoldItalic'), url(https://fonts.gstatic.com/s/lato/v11/HkF_qI1x_noxlxhrhMQYELO3LdcAZYWl9Si6vvxL-qU.woff) format('woff');
-            }}
-        }}
+            }
+        }
 
         /* CLIENT-SPECIFIC STYLES */
         body,
         table,
         td,
-        a {{
+        a {
             -webkit-text-size-adjust: 100%;
             -ms-text-size-adjust: 100%;
-        }}
+        }
 
         table,
-        td {{
+        td {
             mso-table-lspace: 0pt;
             mso-table-rspace: 0pt;
-        }}
+        }
 
-        img {{
+        img {
             -ms-interpolation-mode: bicubic;
-        }}
+        }
 
         /* RESET STYLES */
-        img {{
+        img {
             border: 0;
             height: auto;
             line-height: 100%;
             outline: none;
             text-decoration: none;
-        }}
+        }
 
-        table {{
+        table {
             border-collapse: collapse !important;
             
-        }}
+        }
 
-        body {{
+        body {
             height: 100% !important;
             margin: 0 !important;
             padding: 0 !important;
             width: 100% !important;
-        }}
+        }
 
         /* iOS BLUE LINKS */
-        a[x-apple-data-detectors] {{
+        a[x-apple-data-detectors] {
             color: inherit !important;
             text-decoration: none !important;
             font-size: inherit !important;
             font-family: inherit !important;
             font-weight: inherit !important;
             line-height: inherit !important;
-        }}
+        }
 
         /* MOBILE STYLES */
-        @media screen and (max-width:600px) {{
-            h1 {{
+        @media screen and (max-width:600px) {
+            h1 {
                 font-size: 32px !important;
                 line-height: 32px !important;
-            }}
-        }}
+            }
+        }
 
         /* ANDROID CENTER FIX */
-        div[style*="margin: 16px 0;"] {{
+        div[style*="margin: 16px 0;"] {
             margin: 0 !important;
-        }}
+        }
     </style>
 
 </head>
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;">
     <!-- HIDDEN PREHEADER TEXT -->
-    <div style="display: none; font-size: 100px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;"> OTP from Jobs Textile. </div>
+    <div style="display: none; font-size: 100px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;"> We're thrilled to have you here! Get ready to dive into your new account. </div>
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <!-- LOGO -->
         <tr>
@@ -134,7 +132,7 @@ class OTP_email():
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Yout one time password(OTP) for the phone numnber {}. Never share this OTP with anyone else.</p>
+                            <p style="margin: 0;">Yout one time password(OTP) for the phone numnber 95******87. Never share this OTP with anyone else.</p>
                         </td>
                     </tr>
                     <tr>
@@ -144,7 +142,7 @@ class OTP_email():
                                     <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px; height: 32px;">
                                         <table border="0" cellspacing="0" cellpadding="0">
                                             <tr>
-                                                <td align="center" style="border-radius: 5px; height: 32px;" bgcolor="#00b074"><div style="font-size: 30px; height: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 0px 1px 24px 12px; border-radius: 4px; border: 1px solid #00b074; display: inline-block;letter-spacing: 10px">{}</div></td>
+                                                <td align="center" style="border-radius: 5px; height: 32px;" bgcolor="#00b074"><div style="font-size: 30px; height: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 0px 25px 43px; border-radius: 4px; border: 1px solid #00b074; display: inline-block;letter-spacing: 10px">123456</div></td>
                                             </tr>
                                         </table>
                                     </td>
@@ -167,33 +165,4 @@ class OTP_email():
         </tr>
     </table>
 </body>
-        """.format(num, otp)
-
-        return html
-
-
-class OTP_email1():
-    def OTP(otp):
-        html = """\
-            <div style="font-family: Helvetica,Arial,sans-serif;min-width:1000px;overflow:auto;line-height:2">
-            <div style="margin:50px auto;width:70%;padding:20px 0">
-                <div style="border-bottom:1px solid #eee">
-                <img src="logo-main-black.png" />
-                </div>
-                <p style="font-size:1.1em">Hi,</p>
-                <p>Thank you for choosing Your Brand. Use the following OTP to complete your Sign Up procedures. OTP is valid for 5 minutes</p>
-                <h2 style="background: #00466a;margin: 0 auto;width: max-content;padding: 0 10px;color: #fff;border-radius: 4px;">324457</h2>
-                <p style="font-size:0.9em;">Regards,<br />Your Brand</p>
-                <hr style="border:none;border-top:1px solid #eee" />
-                <div style="float:right;padding:8px 0;color:#aaa;font-size:0.8em;line-height:1;font-weight:300">
-                <p>Your Brand Inc</p>
-                <p>1600 Amphitheatre Parkway</p>
-                <p>California</p>
-                </div>
-            </div>
-            </div>
-            """
-
-        return html
-
-# <a href="" style="font-size:1.4em;color: #00466a;text-decoration:none;font-weight:600">Your Brand</a>
+</html>
