--- a/otp.html
+++ b/otp.html
@@ -132,7 +132,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Yout one time password(OTP) for the phone numnber 95******87. Never share this OTP with anyone else.</p>
+                            <p style="margin: 0;">Yout one time password(OTP) for the phone number {{}}. Never share this OTP with anyone else.</p>
                         </td>
                     </tr>
                     <tr>
@@ -142,7 +142,7 @@
                                     <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px; height: 32px;">
                                         <table border="0" cellspacing="0" cellpadding="0">
                                             <tr>
-                                                <td align="center" style="border-radius: 5px; height: 32px;" bgcolor="#00b074"><div style="font-size: 30px; height: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 0px 25px 43px; border-radius: 4px; border: 1px solid #00b074; display: inline-block;letter-spacing: 10px">123456</div></td>
+                                                <td align="center" style="border-radius: 5px; height: 32px;" bgcolor="#00b074"><div style="font-size: 30px; height: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 0px 25px 43px; border-radius: 4px; border: 1px solid #00b074; display: inline-block;letter-spacing: 10px">{{}}</div></td>
                                             </tr>
                                         </table>
                                     </td>
